--- a/koha-tmpl/intranet-tmpl/default/de/catalogue/searchresults.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/catalogue/searchresults.tmpl
@@ -62,7 +62,7 @@
 		<!-- TMPL_IF NAME=location-only --><!-- TMPL_VAR NAME=location-only --><br><!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME=not-available-p -->Nicht verf&uuml;gbar<!-- TMPL_IF NAME=not-available-plural-p --> (<!-- TMPL_VAR NAME=not-available-p -->)<!-- /TMPL_IF --><br><!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME=lost-p -->Exemplar vermi&szlig;t<!-- TMPL_IF NAME=lost-plural-p --> (<!-- TMPL_VAR NAME=not-available-p -->)<!-- /TMPL_IF --><br><!-- /TMPL_IF -->
-		<!-- TMPL_IF NAME=withdrawn-p -->Ausgemustert<!-- TMPL_IF NAME=withdrawn-plural-p --> (<!-- TMPL_VAR NAME=not-available-p -->)<!-- /TMPL_IF --><br><!-- /TMPL_IF -->
+		<!-- TMPL_IF NAME=withdrawn-p -->Gel&ouml;scht<!-- TMPL_IF NAME=withdrawn-plural-p --> (<!-- TMPL_VAR NAME=not-available-p -->)<!-- /TMPL_IF --><br><!-- /TMPL_IF -->
 		<!-- TMPL_IF NAME=on-loan-p -->Entliehen<!-- TMPL_IF NAME=on-loan-plural-p --> (<!-- TMPL_VAR NAME=not-available-p -->)<!-- /TMPL_IF --><br><!-- /TMPL_IF -->
 		<!-- TMPL_ELSE -->
 		<!-- TMPL_VAR NAME="location" -->
