--- a/koha-tmpl/intranet-tmpl/default/de/circ/branchtransfers.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/circ/branchtransfers.tmpl
@@ -5,7 +5,9 @@
 </div>
 
 <h1>Ausleihe: Leihverkehr</h1>
-<b>Zweigstelle:</b> <!-- TMPL_VAR NAME="genbrname" --> &nbsp; <b>Drucker:</b> <!-- TMPL_VAR NAME="genprname" --> <a href="selectbranchprinter.pl" class="button">Einstellungen &auml;ndern</a>
+<b>Zweigstelle:</b> <!-- TMPL_VAR NAME="genbrname" --> &nbsp;
+ <b>Drucker:</b> <!-- TMPL_VAR NAME="genprname" -->
+ <a href="selectbranchprinter.pl" class="button">Einstellungen &auml;ndern</a>
 <input type="hidden" name="branch" value="<!-- TMPL_VAR NAME="branch" -->">
 <input type="hidden" name="printer" value="<!-- TMPL_VAR NAME="printer" -->">
 
