--- a/koha-tmpl/intranet-tmpl/default/de/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/circ/circulation.tmpl
@@ -10,7 +10,8 @@
 	<div id="bloc25">
 		<h2 class="circulation">Parameter</h2>
 		<p>
-			<b>Zweigstelle:</b> <!-- TMPL_VAR NAME="branchname" --> &nbsp; <b>Drucker:</b> <!-- TMPL_VAR NAME="printername" --> <a href="selectbranchprinter.pl" class="button circulation">Einstellungen &auml;ndern</a>
+			<b>Zweigstelle:</b> <!-- TMPL_VAR NAME="branchname" --> &nbsp; 
+			<b>Drucker:</b> <!-- TMPL_VAR NAME="printername" --> <a href="selectbranchprinter.pl" class="button circulation">Einstellungen &auml;ndern</a>
 		</p>
 	
 	<!-- TMPL_IF NAME="message" -->
