--- a/koha-tmpl/intranet-tmpl/default/de/parameters/admin-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/admin-home.tmpl
@@ -34,7 +34,20 @@
 			<td valign="top" width="25%"><a href="/cgi-bin/koha/admin/itemtypes.pl">Medientypen</a></td>
 			<td>Medientypen definieren</td>
 		</tr>
+<tr>
+      <td valign=top width="25%"><a href="/cgi-bin/koha/admin/itemtypecategory.pl"> Exemplarkategorien</a></td>
+      <td>Definition von Exemplarkategorien. (Sachliteratur, Sch&ouml;ne Literatur...)</td>
+    </tr>
 
+    <tr>
+      <td valign=top width="25%"><a href="/cgi-bin/koha/admin/itemtypesubcategory.pl"> Exemplarunterkategorien</a></td>
+      <td>Definition der Unterkategorien. (Sch&ouml;ne Literatur Jugendliche, Sachliteratur Jugendliche.... Sch&ouml;ne Literatur Erwachsene.)</td>
+    </tr>
+
+    <tr>
+      <td valign=top width="25%"><a href="/cgi-bin/koha/admin/mediatype.pl"> Exemplarmedientypen</a></td>
+      <td>Definition der Exemplarmedientypen. (CD, Video, Buch, Spiel...)</td>
+    </tr>
 		<tr>
 			<td valign="top" width="25%"><a href="/cgi-bin/koha/admin/categorie.pl">Benutzerkategorien</a></td>
 			<td>Definition der Benutzerkategorien</td>
