--- a/koha-tmpl/intranet-tmpl/default/de/parameters/marctagstructure.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/marctagstructure.tmpl
@@ -115,7 +115,7 @@
 <!-- ------------------------------------------------------------------------ -->
 <!-- TMPL_IF NAME="else" -->
 <div id="bloc25">
-<h2 class="parameters">Framework ausw%auml;hlen</h2>
+<h2 class="parameters">Framework ausw&auml;hlen</h2>
 <form action="<!-- TMPL_VAR NAME="script_name" -->" method="post">
 	<select name="frameworkcode">
 		<option value="">Default</option>
