--- a/koha-tmpl/intranet-tmpl/default/de/reports/borrowers_out.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/reports/borrowers_out.tmpl
@@ -1,4 +1,5 @@
 <!-- TMPL_INCLUDE NAME="reportswcal-top.inc" -->
+<!-- angepasst fuer 2.2.3, hellen 24/06/05 -->
 <div id="mainbloc" >
 
 <!-- TMPL_IF NAME="do_it" -->
@@ -79,7 +80,9 @@
 		<h3 class="reports"> Ausgabe </h3>
 		<input type="radio" checked name="output" value="screen" > In ein Browserfenster
 		<br>
-		<input type="radio" name="output" value="file"> In eine Datei <input type="text" name="basename" value="Export"> In eine Anwendung <!-- TMPL_VAR NAME="CGIextChoice" --> <!-- TMPL_VAR NAME="CGIsepChoice" -->
+		<input type="radio" name="output" value="file"> In eine Datei <input type="text" name="basename" value="Export"> In eine Anwendung
+		<!-- TMPL_VAR NAME="CGIextChoice" -->
+		<!-- TMPL_VAR NAME="CGIsepChoice" -->
 	</p>
 	</div>
 	<p>
