--- a/koha-tmpl/intranet-tmpl/default/de/acqui.simple/addbiblio.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/acqui.simple/addbiblio.tmpl
@@ -1,16 +1,16 @@
 <!-- TMPL_INCLUDE NAME="marc-top.inc" -->
 <div class="tabbed">
 	<form method="post" name="f">
-	<h1 class="catalogue">Biblionummer : <!-- TMPL_VAR NAME="oldbiblionumber" --></h1>
+	<h1 class="catalogue">Biblionumber : <!-- TMPL_VAR NAME="oldbiblionumber" --></h1>
 	<p>
 		<input type="hidden" name="op" value="addbiblio">
 		<input type="hidden" name="addfield_field">
 		<input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->">
 		<input type="hidden" name="oldbiblionumber" value="<!-- TMPL_VAR NAME="oldbiblionumber" -->">
 		<!-- TMPL_IF name="bibid" -->
-			<BUTTON value="Save" onclick="Check(this.form)" accesskey="s" class="button catalogue">&Auml;nderungen <u>s</u>ichern</BUTTON>
+			<input type ="button" value="Speichern" onclick="Check(this.form)" accesskey="w" class="button catalogue">
 		<!-- TMPL_ELSE -->
-			<BUTTON value="Add biblio" onclick="Check(this.form)" accesskey="n" class="button catalogue"><u>N</u>euer Eintrag</BUTTON>
+			<input type ="button" value="Biblio hinzuf&uuml;gen" onclick="Check(this.form)" accesskey="w" class="button catalogue">
 		<!-- /TMPL_IF -->
 		<a href="javascript:PopupZ3950()" class="button catalogue">z3950 Suche</a>
 	</p>
