--- a/koha-tmpl/intranet-tmpl/default/de/authorities/authorities.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/authorities/authorities.tmpl
@@ -3,21 +3,35 @@
 
 <div class="tabbed">
 	<form method="post" name="f">
-	<h1 class="authority">Authority number <!-- TMPL_VAR NAME="authid" --></h1>
+	<!-- TMPL_IF name="authid" -->
+		<h1 class="authority">Modify authority #<!-- TMPL_VAR NAME="authid" --> (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+	<!-- TMPL_ELSE -->
+		<h1 class="authority">Adding authority (<!-- TMPL_VAR name="authtypetext" -->)</h1>
+	<!-- /TMPL_IF -->
 	<p>
 		<input type="hidden" name="op" value="add">
 		<input type="hidden" name="addfield_field">
 		<input type="hidden" name="authtypecode" value="<!-- TMPL_VAR NAME="authtypecode" -->">
 		<input type="hidden" name="authid" value="<!-- TMPL_VAR NAME="authid" -->">
 		<!-- TMPL_IF name="authid" -->
-			<input type="button" value="Speichern" onclick="Check(this.form)" accesskey="w" class="button authority">
+			<input type="button" value="Save" onClick="Check(this.form)" accesskey="w" class="button authority">
 		<!-- TMPL_ELSE -->
-			<input type="button" value="Authority hinzuf&uuml;gen" onclick="Check(this.form)" accesskey="w" class="button authority">
+			<input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority">
 		<!-- /TMPL_IF -->
 	</p>
 </div>
 
 <br><br><br><br><br><br><br><br><br><br><br>
+<!-- TMPL_IF name="duplicateauthid" -->
+	<div class="problem">
+		<p>Duplicate suspected with <a href='javascript:openWindow("detail.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->&popup=1", "Duplicate Authority")' class="button authority"><!-- TMPL_VAR name="duplicateauthvalue" --></a></p>
+		<p>You must either :</p>
+		<ul>
+			<p><input type="checkbox" value=1 name="confirm_not_duplicate">confirm it's not a duplicate (and click on <input type="button" value="Add authority" onClick="Check(this.form)" accesskey="w" class="button authority"> again)</p>
+			<p>Go to <a href="authorities.pl?authid=<!-- TMPL_VAR name="duplicateauthid" -->" >original authority</a></p>
+		</ul>
+	</div>
+<!-- /TMPL_IF -->
 
 <!-- TMPL_LOOP NAME="0XX" -->
 	<!-- TMPL_IF name="tag" -->
@@ -132,8 +146,8 @@ function Check(f) {
 	if (total_errors!=0) {
 		alertString2  = _("Form not submitted because of the following problem(s)");
 		alertString2 += "\n------------------------------------------------------------------------------------\n";
-		alertString2 += "\n- "+ total_missing_mandatory_tags +_("Pflichttags leer");
-		alertString2 += "\n- "+ total_missing_mandatory_subfields +_("Pflichtfeld leer (sieh fett dargestellte Unterfelder)");
+		alertString2 += "\n- "+ total_missing_mandatory_tags +_(" mandatory tags empty");
+		alertString2 += "\n- "+ total_missing_mandatory_subfields +_(" mandatory fields empty (see bold subfields)");
 		alert(alertString2);
 	} else {
 		document.forms[1].submit();
@@ -164,8 +178,8 @@ function PopupZ3950() {
 }
 
 function AddField(field) {
-	document.forms[0].op.value = "addfield";
-	document.forms[0].addfield_field.value=field;
+	document.forms[1].op.value = "addfield";
+	document.forms[1].addfield_field.value=field;
 	document.f.submit();
 }
 </script>
