--- a/koha-tmpl/intranet-tmpl/default/de/catalogue/MARCdetail.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/catalogue/MARCdetail.tmpl
@@ -3,7 +3,28 @@
 <!-- TMPL_UNLESS name="popup" -->
 	<div class="tabbed">
 		<h1 class="catalogue">Biblionummer : <!-- TMPL_VAR NAME="biblionumber" --></h1>
-		<a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Biblio bearbeiten  </a>  <a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&op=duplicate" class="button catalogue">  Duplizieren  </a>  <a href="acqui.simple/additem.pl?bibid=<!-- TMPL_VAR name="bibid"-->" class="button catalogue">  Exemplar bearbeiten  </a>   <a href="javascript:confirm_deletion()" class="button catalogue">  L&ouml;schen  </a>  <a href="detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Vollanzeige  </a>  <a href="detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Normalanzeige  </a>  <a href="ISBDdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  ISBD  </a>  <a href="javascript:Dopop('bookshelves/addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->')" class="button catalogue">  zu virtuellem Regal hinzuf&uuml;gen  </a>  <a href="javascript:Dopop('detailprint.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->')" class="button catalogue">  Drucken  </a>
+		<a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Biblio bearbeiten
+		  </a>
+		    <a href="acqui.simple/addbiblio.pl?oldbiblionumber=<!-- TMPL_VAR NAME="biblionumber" -->&op=duplicate" class="button catalogue">
+		      Duplizieren 
+		       </a>  <a href="acqui.simple/additem.pl?bibid=<!-- TMPL_VAR name="bibid"-->" class="button catalogue">
+		         Exemplar bearbeiten
+			   </a>   <a href="javascript:confirm_deletion()" class="button catalogue">
+			     L&ouml;schen 
+			      </a> 
+			       <a href="detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue"> 
+			        Vollanzeige
+				  </a> 
+				   <a href="detail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  Normalanzeige
+				     </a>
+				       <a href="ISBDdetail.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">  ISBD
+				         </a> 
+					  <a href="javascript:Dopop('bookshelves/addbookbybiblionumber.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->')" class="button catalogue">
+					    zu vituellem Regal hinzuf&uuml;gen
+					      </a> 
+					       <a href="javascript:Dopop('detailprint.pl?bib=<!-- TMPL_VAR NAME="biblionumber" -->')" class="button catalogue">
+					         Drucken
+						   </a>
 		<!-- TMPL_IF name="subscriptionsnumber" -->
 		<a href="bull-home.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber" -->" class="button catalogue">
 			Bestellungen
@@ -362,7 +383,7 @@ function active(numlayer)
 }
 
 function confirm_deletion() {
-	var is_confirmed = confirm('Wollen Sie diesen Biblio wirklich l&ouml;schen?');
+	var is_confirmed = confirm('Are you sure you want to delete this biblio?');
 	if (is_confirmed) {
 		window.location="acqui.simple/addbiblio.pl?op=delete&amp;bibid=<!-- TMPL_VAR NAME="bibid" -->";
 	}
