--- a/koha-tmpl/intranet-tmpl/default/de/circ/selectbranchprinter.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/circ/selectbranchprinter.tmpl
@@ -29,7 +29,7 @@
 	</select>
 <!-- /TMPL_IF --></p>
 <p><input type="hidden" name="setcookies" value="1">
-<input value="Abschicken" type="changesettings" class="button"></p>
+<input type="submit" value="Abschicken" type="changesettings" class="button"></p>
 </form>
 
 </div>
