--- a/koha-tmpl/intranet-tmpl/default/de/mancredit.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/mancredit.tmpl
@@ -9,7 +9,7 @@
 <select name="type">
 <option value="C">Gutschrift</option>
 <option value="BAY">Baycorp Adjustment</option>
-<option value="WORK">Arbeitsleistung</option>
+<option value="WORK">Erledigt</option>
 </select>
 </td></tr>
 <tr><td><b>Mediennummer</b></td><td><input type="text" name="itemnum"></td></tr>
