--- a/koha-tmpl/intranet-tmpl/default/de/parameters/marc_subfields_structure.tmpl
+++ b/koha-tmpl/intranet-tmpl/default/de/parameters/marc_subfields_structure.tmpl
@@ -19,7 +19,8 @@
 			<h3>MARC constraints</h3>
 			<ul>
 				<p>
-					<!-- TMPL_VAR NAME="repeatable" --> repeatable  <!-- TMPL_VAR NAME="mandatory" --> mandatory
+					<!-- TMPL_VAR NAME="repeatable" --> repeatable 
+					<!-- TMPL_VAR NAME="mandatory" --> mandatory
 				</p>
 				<!-- TMPL_IF name="frameworkcode" -->
 					<p>Search also: <i>(meaningful only for default framework)</i></p>
@@ -40,10 +41,13 @@
 				<p><!-- TMPL_VAR NAME="hidden" --> hidden (subfield is managed, but hidden. -should be filled by a plugin or thesaurus-)</p>
 				<p><!-- TMPL_VAR NAME="isurl" --> URL (if checked, it means that the subfield is an URL and can be clicked</p>
 				<p>
-					<label>Auth value:</label> <!-- TMPL_VAR NAME="authorised_value" --> oder Thesaurus: <!-- TMPL_VAR NAME="authtypes" --> oder Plugin: <!-- TMPL_VAR NAME="value_builder" -->
+					<label>Auth value:</label> <!-- TMPL_VAR NAME="authorised_value" -->
+					or thesaurus: <!-- TMPL_VAR NAME="authtypes" -->
+					or plugin: <!-- TMPL_VAR NAME="value_builder" -->
 				</p>
 				<p>
-					<label>&nbsp;</label>Link to field :  <input type="text" name="link" value="<!-- TMPL_VAR NAME="link" -->" size="10" maxlength="5"> (exemple :200b)
+					<label>&nbsp;</label>Link to field :
+					<input type="text" name="link" value="<!-- TMPL_VAR NAME="link" -->" size="10" maxlength="5"> (exemple :200b)
 				</p>
 			</ul>
 		</td>
@@ -62,7 +66,7 @@
 		<td background="<!-- TMPL_VAR NAME="themelang" -->/images/background-mem.gif"><b><!-- TMPL_VAR NAME="tagsubfield" --></b></td>
 	</tr>
 	<tr><td>&nbsp;</td><td><!-- TMPL_VAR NAME="liblibrarian" --></td></tr>
-	<tr><td colspan="2" align="center">L&ouml;schen best&auml;tigen</td></tr>
+	<tr><td colspan="2" align="center">CONFIRM DELETION</td></tr>
 	<tr>
 		<td>
 			<form action="<!-- TMPL_VAR NAME="delete_link" -->" method="post">
@@ -71,7 +75,7 @@
 				<input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->">
 				<input type="hidden" name="tagsubfield" value="<!-- TMPL_VAR NAME="tagsubfield" -->">
 				<input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->">
-				<input type="submit" value="JA">
+				<input type="submit" value="YES">
 			</form>
 		</td>
 		<td>
@@ -80,7 +84,7 @@
 				<input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->">
 				<input type="hidden" name="tagsubfield" value="<!-- TMPL_VAR NAME="tagsubfield" -->">
 				<input type="hidden" name="frameworkcode" value="<!-- TMPL_VAR NAME="frameworkcode" -->">
-				<input type="submit" value="NEIN">
+				<input type="submit" value="NO">
 			</form>
 		</td>
 	</tr>
@@ -88,7 +92,7 @@
 
 <!-- TMPL_IF NAME="delete_confirmed" -->
 <!-- ------------------------------------------------------------------------ -->
-	Daten gel&ouml;scht
+	Data deleted
 	<form action="<!-- TMPL_VAR NAME="script_name" -->" method="post"><input type="hidden" name="tagfield" value="<!-- TMPL_VAR NAME="tagfield" -->">
 	<input type="submit" value="OK">
 	</form>
@@ -103,9 +107,9 @@
 <table>
 <tr>
 	<th>Subfield</th>
-	<th>Texte</th>
+	<th>Text</th>
 	<th>Constraints</th>
-	<th>L&ouml;schen</th>
+	<th>Delete</th>
 <!-- TMPL_LOOP NAME="loop" -->
 <tr<!-- TMPL_IF NAME="toggle" --> class="hilighted"<!-- /TMPL_IF -->>
 	<td><!-- TMPL_VAR NAME="tagsubfield" --></td>
@@ -121,12 +125,12 @@
 			<i>subfield ignored</i>
 		<!-- TMPL_ELSE -->
 			Tab :<!-- TMPL_VAR NAME="tab" -->,
-			<!-- TMPL_IF NAME="kohafield" -->Koha-Feld : <!-- TMPL_VAR NAME="kohafield" -->, <!--/TMPL_IF -->
-			<!-- TMPL_IF NAME="repeatable" -->Wiederholbar, <!-- TMPL_ELSE -->Nicht wiederholbar<!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="mandatory" -->Obligatorisch, <!-- TMPL_ELSE -->Nicht obligatorisch,<!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="seealso" -->siehe auch: <!-- TMPL_VAR NAME="seealso" --><!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="hidden" -->versteckt<!-- /TMPL_IF -->
-			<!-- TMPL_IF NAME="isurl" -->ist ein URL<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="kohafield" -->Koha field : <!-- TMPL_VAR NAME="kohafield" -->, <!--/TMPL_IF -->
+			<!-- TMPL_IF NAME="repeatable" -->Repeatable, <!-- TMPL_ELSE -->Not repeatable,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="mandatory" -->Mandatory, <!-- TMPL_ELSE -->Not mandatory,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="seealso" -->see also : <!-- TMPL_VAR NAME="seealso" -->,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="hidden" -->hidden,<!-- /TMPL_IF -->
+			<!-- TMPL_IF NAME="isurl" -->is an url,<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="authorised_value" --> Auth value :<!-- TMPL_VAR NAME="authorised_value" -->,<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="authtypecode" --> Authority :<!-- TMPL_VAR NAME="authtypecode" -->,<!-- /TMPL_IF -->
 			<!-- TMPL_IF NAME="value_builder" -->Plugin :<!-- TMPL_VAR NAME="value_builder" -->,<!-- /TMPL_IF -->
@@ -142,7 +146,7 @@
 	<img src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/2uparrow.png" width="32" hspace="0" vspace="0" border="0">
 </a>
 <!-- TMPL_IF NAME="previous" -->
-	<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1leftarrow.png" title="vorheriges" alt="vorheriges" border="0">
+	<input type="image" src="<!-- TMPL_VAR NAME="interface" -->/<!-- TMPL_VAR NAME="theme" -->/images/1leftarrow.png" title="previous" alt="previous" border="0" >
 	</a><!-- /TMPL_IF -->
 <!-- TMPL_IF NAME="next" -->
 	<!-- TMPL_VAR NAME="next" -->
